test/spec_vectors/i32/fail/module_50.wat
(module (memory 0) (func $type-binary-2nd-operand-empty-in-memory.grow (memory.grow (i32.const 0) (i32.add)) (drop)))